# advent-of-code

./: .gitignore  README.md
2015/haskell/: .advent.cabal.swp  advent.cabal
2015/haskell/app/: Lude.hs  X1.hs  X2.hs  X3.hs  X4.hs  X5.hs  X6.hs  X7.hs
2018/: advent2018.cabal  stack.yaml
2018/app/: Main.hs
2018/src/: BrickHelper.hs  DayEight.hs  DayEleven.hs  DayFifteen.hs  DayFive.hs  DayFour.hs  DayFourteen.hs  DayNine.hs  DayOne.hs  DaySeven.hs  DaySix.hs  DayTen.hs  DayThirteen.hs  DayThree.hs  DayTwelve.hs  DayTwo.hs  Util.hs
2018/test/: DayOneSpec.hs
2019/: advent2019.cabal  package.yaml
2019/app/: Main.hs
2019/src/: Eight.hs  Five.hs  Four.hs  Intcode.hs  Launcher.hs  Nine.hs  One.hs  Seven.hs  Six.hs  Ten.hs  Three.hs  Two.hs  Util.hs
2019/test/: FiveSpec.hs  NineSpec.hs  OneSpec.hs  SevenSpec.hs  SixSpec.hs  TenSpec.hs  ThreeSpec.hs  TwoSpec.hs
2020/: advent2020.cabal  endlessly.sh
2020/app/: Main.hs
2020/inputs/: eighteen
2020/src/: Eight.hs  Eighteen.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  Fourteen.hs  Lib.hs  Nine.hs  One.hs  Seven.hs  Seventeen.hs  SeventeenPartTwo.hs  Six.hs  Sixteen.hs  Ten.hs  Thirteen.hs  Three.hs  Twelve.hs  Two.hs  Util.hs
2020/test/: FourSpec.hs  OneSpec.hs  ThreeSpec.hs  TwoSpec.hs
2021/: x2021.cabal
2021/app/: Main.hs
2021/rust/src/: main.rs  util.rs  x1.rs
2021/src/: Lude.hs  Main.hs  Prelude.hs  X1.hs  X10.hs  X11.hs  X12.hs  X13.hs  X2.hs  X3.hs  X4.hs  X5.hs  X6.hs  X7.hs  X8.hs  X9.hs
2022/c/: a.out  x1.c
2022/c/src/: .#x3.c  x1-faffy.c  x2.c  x3.c
2022/clojure/: project.clj
2022/clojure/src/advent/: core.clj  x1.clj  x2.clj  x3.clj  x4.clj
2022/cpp/: a.out  x1.cpp
2022/haskell/: advent.cabal
2022/haskell/app/: Main.hs  X1.hs  X2.hs  X3.hs  X4.hs  X5.hs  X6.hs  X7.hs  X8.hs
2022/ruby/: x1.rb
2022/rust/: Cargo.toml
2022/rust/src/: main.rs  x1.rs  x2.rs  x3.rs  x4.rs
2023/haskell/: advent.cabal
2023/haskell/app/: Lude.hs  X1.hs  X10.hs  X11.hs  X12.hs  X13.hs  X14.hs  X15.hs  X16.hs  X17.hs  X18.hs  X19.hs  X2.hs  X20.hs  X21.hs  X22.hs  X23.hs  X24.hs  X25.hs  X3.hs  X4.hs  X5.hs  X6.hs  X7.hs  X8.hs  X9.hs
2023/haskell/inputs/: .1.swo  .1.swp
2024/common-lisp/: advent.lisp
2025/: .gitignore  advent.asd  system-index.txt
2025/src/: main.lisp
