cabal-version:      2.4
name:               x2021
version:            0.1.0.0

author:             Jordan Gedney
maintainer:         jordangedney@gmail.com

executable x2021
    main-is:          Main.hs

    build-depends:
        base ^>= 4.16.0.0
      , containers
      , split
      , vector

    default-extensions:
        LambdaCase
      , OverloadedLists
      , ScopedTypeVariables

    mixins:
        base (Prelude as BasePrelude)
      , base hiding (Prelude)

    hs-source-dirs:   src
