cabal-version:      2.4
name:               x2021
version:            0.1.0.0

author:             Jordan Gedney
maintainer:         jordangedney@gmail.com

executable x2021
    main-is:          Main.hs

    other-modules:
        Lude
        X13

    build-depends:
        base ^>= 4.16.0.0
      , containers
      , split
      , vector
      , sort

    default-extensions:
        LambdaCase
      -- , OverloadedLists
      , ScopedTypeVariables
      , NoImplicitPrelude

    hs-source-dirs:   src
