cabal-version:      3.4
name:               advent
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jordan Gedney
maintainer:         jordangedney@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent
    import:           warnings
    -- main-is:          Main.hs
    main-is:          X6.hs
    other-modules:    Lude

    -- other-extensions:
    build-depends:
                      base ^>=4.17.2.0
                    , split
                    , sort
                    , containers
                    , vector
                    , cryptonite
                    , bytestring

    default-extensions:
        LambdaCase
      , ScopedTypeVariables
      , NoImplicitPrelude

    hs-source-dirs:   app
    default-language: GHC2021
