cabal-version:      2.4
name:               advent
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jordan Gedney
maintainer:         jordangedney@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent
    main-is:          X6.hs
    other-modules:    Lude

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , split
                    , sort
                    , containers
                    , vector
                    , cryptonite
                    , bytestring
                    , text
                    , megaparsec
                    , lens
    default-extensions:
        LambdaCase
      , ScopedTypeVariables
      , NoImplicitPrelude
      , OverloadedStrings

    hs-source-dirs:   app
    default-language: GHC2021
